src/snapshots/enderpy__lexer__tests__test-lexer-20.snap
---
source: src/lexer.rs
description: +=
---
[
    Token {
        kind: AddAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
