src/snapshots/enderpy__lexer__tests__test-lexer-21.snap
---
source: src/lexer.rs
description: "-="
---
[
    Token {
        kind: SubAssign,
        value: None,
    },
]
