src/snapshots/enderpy__lexer__tests__test-lexer-24.snap
---
source: src/lexer.rs
description: "%="
---
[
    Token {
        kind: ModAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
