src/snapshots/enderpy__lexer__tests__test-lexer-25.snap
---
source: src/lexer.rs
description: "@="
---
[
    Token {
        kind: MatrixMulAssign,
        value: None,
    },
]
