src/snapshots/enderpy__lexer__tests__test-lexer-26.snap
---
source: src/lexer.rs
description: "&="
---
[
    Token {
        kind: BitAndAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
