src/snapshots/enderpy__lexer__tests__test-lexer-28.snap
---
source: src/lexer.rs
description: ^=
---
[
    Token {
        kind: BitXorAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
