src/snapshots/enderpy__lexer__tests__test-lexer-3.snap
---
source: src/lexer.rs
description: +=2
---
[
    Token {
        kind: AddAssign,
        value: None,
        start: 0,
        end: 2,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 2,
        end: 3,
    },
]
